// Vitest Snapshot v1

exports[`(component) TweetButton > Snap Shot - Contain Hashtags 1`] = `
<div>
  <a
    class="_enshita-button-box_fd3da4 _enshita-event-tweet-box_3e3a69"
    href="https://twitter.com/intent/tweet?text=Tweet%20Content&url=&hashtags=共同開発鯖,共同開発鯖LT"
    rel="noopener noreferrer"
    role="button"
    target="_blank"
  >
    <div
      class="_enshita-button-icon-box_fd3da4 _enshita-event-tweet-icon_3e3a69"
    >
      <span />
    </div>
    <p
      class="_enshita-button-text_fd3da4 _enshita-event-tweet-text_3e3a69"
    >
      Tweet
    </p>
  </a>
</div>
`;

exports[`(component) TweetButton > Snap Shot - Contain Hashtags and URL 1`] = `
<div>
  <a
    class="_enshita-button-box_fd3da4 _enshita-event-tweet-box_3e3a69"
    href="https://twitter.com/intent/tweet?text=Tweet%20Content&url=https://growthers.dev&hashtags=共同開発鯖,共同開発鯖LT"
    rel="noopener noreferrer"
    role="button"
    target="_blank"
  >
    <div
      class="_enshita-button-icon-box_fd3da4 _enshita-event-tweet-icon_3e3a69"
    >
      <span />
    </div>
    <p
      class="_enshita-button-text_fd3da4 _enshita-event-tweet-text_3e3a69"
    >
      Tweet
    </p>
  </a>
</div>
`;

exports[`(component) TweetButton > Snap Shot - Contain URL 1`] = `
<div>
  <a
    class="_enshita-button-box_fd3da4 _enshita-event-tweet-box_3e3a69"
    href="https://twitter.com/intent/tweet?text=Tweet%20Content&url=https://growthers.dev&hashtags="
    rel="noopener noreferrer"
    role="button"
    target="_blank"
  >
    <div
      class="_enshita-button-icon-box_fd3da4 _enshita-event-tweet-icon_3e3a69"
    >
      <span />
    </div>
    <p
      class="_enshita-button-text_fd3da4 _enshita-event-tweet-text_3e3a69"
    >
      Tweet
    </p>
  </a>
</div>
`;

exports[`(component) TweetButton > Snap Shot - Only Text 1`] = `
<div>
  <a
    class="_enshita-button-box_fd3da4 _enshita-event-tweet-box_3e3a69"
    href="https://twitter.com/intent/tweet?text=Tweet%20Content&url=&hashtags="
    rel="noopener noreferrer"
    role="button"
    target="_blank"
  >
    <div
      class="_enshita-button-icon-box_fd3da4 _enshita-event-tweet-icon_3e3a69"
    >
      <span />
    </div>
    <p
      class="_enshita-button-text_fd3da4 _enshita-event-tweet-text_3e3a69"
    >
      Tweet
    </p>
  </a>
</div>
`;
